test/Fail/Cumulativity-inequal-universes.err
Cumulativity-inequal-universes.agda:12.9-13: error: [UnequalSorts]
Set != Set₁
when checking that the expression refl has type Set ≡ Set₁
